--- a/SistemaOperativo/SistemaOperativo/SistemaOperativo.csproj
+++ b/SistemaOperativo/SistemaOperativo/SistemaOperativo.csproj
@@ -56,6 +56,12 @@
     <Compile Include="Proceso.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="state.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="state.Designer.cs">
+      <DependentUpon>state.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="GUI.resx">
       <DependentUpon>GUI.cs</DependentUpon>
     </EmbeddedResource>
@@ -68,6 +74,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="state.resx">
+      <DependentUpon>state.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
